<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".registeracc">

    <ImageView
        android:id="@+id/logo_hor_maprede_daynight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginBottom="120sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/descrip_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_logomarca_maprede_day_night" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:freezesText="false"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:lines="1"
        android:text="@string/register_title"/>

    <EditText
        android:id="@+id/edt_nome_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        android:textColor="@color/cinza_meio"
        android:textColorHint="@color/cinza_meio"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_sobrenome_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:hint="@string/hint_sobrenome"
        android:inputType="textPersonName"
        android:textColor="@color/cinza_meio"
        android:textColorHint="@color/cinza_meio" />

    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/cinza_meio"
        android:textColorHint="@color/cinza_meio" />

    <EditText
        android:id="@+id/edt_senha_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:textColor="@color/cinza_meio"
        android:textColorHint="@color/cinza_meio"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_confirmar_senha_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:hint="@string/hint_conf_senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/cinza_meio"
        android:textColorHint="@color/cinza_meio" />

    <CheckBox
        android:id="@+id/ckb_privacidade"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/verde_escuro2"
        android:text="@string/tit_privacidade"
        android:textColor="@color/cinza_meio" />

    <CheckBox
        android:id="@+id/ckb_mostrar_senha_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/verde_escuro2"
        android:text="@string/tit_mostrar_senha"
        android:textColor="@color/cinza_meio" />

    <Button
        android:id="@+id/btn_registrar_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/verde_escuro"
        android:text="@string/btn_registrar_tit"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/verde_escuro2"
        android:text="@string/btn_login_tit"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/policies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/policies"
        android:textSize="14sp"
        />

    <ProgressBar
        android:id="@+id/loginprogressBar_register"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/amarelo"
        android:visibility="invisible" />


</LinearLayout>